--- a/program.html
+++ b/program.html
@@ -5,7 +5,25 @@
     </head>
     <body>
         <script>
-            console.log('Hello World')
+          var canvas = document.createElement('canvas') ;
+          canvas.width = 800;
+          canvas.height = 600;
+          document.body.appendChild(canvas) ;
+          var c = canvas.getContext('2d');
+          var image = new Image();
+          image.src = 'images/nanonaut.png';
+          var x = 0;
+          var y = 40;
+          window.addEventListener('load', start);
+          function start() {
+           window.requestAnimationFrame(loop);
+          }
+          function loop() {
+            c.clearRect(0, 0, 800, 600);
+            c.drawImage(image, x, y);
+            x = x + 1;
+            window.requestAnimationFrame(loop);
+          }
         </script>
     </body>
 </html>
