--- a/program.html
+++ b/program.html
@@ -5,25 +5,48 @@
     </head>
     <body>
         <script>
-          var canvas = document.createElement('canvas') ;
-          canvas.width = 800;
-          canvas.height = 600;
-          document.body.appendChild(canvas) ;
-          var c = canvas.getContext('2d');
-          var image = new Image();
-          image.src = 'images/nanonaut.png';
-          var x = 0;
-          var y = 40;
-          window.addEventListener('load', start);
-          function start() {
-           window.requestAnimationFrame(loop);
-          }
-          function loop() {
-            c.clearRect(0, 0, 800, 600);
-            c.drawImage(image, x, y);
-            x = x + 1;
-            window.requestAnimationFrame(loop);
-          }
+            // CONSTANTS
+var CANVAS_WIDTH = 800;
+var CANVAS_HEIGHT = 600;
+var NANONAUT_WIDTH = 181;
+var NANONAUT_HEIGHT = 229;
+var GROUND_Y = 540;
+
+            // SETUP
+var canvas = document.createElement('canvas');
+var c = canvas.getContext('2d');
+canvas.width = CANVAS_WIDTH;
+canvas.height = CANVAS_HEIGHT;
+document.body.appendChild(canvas);
+var nanonautImage = new Image();
+nanonautImage.src = 'images/nanonaut.png';
+var nanonautX = 50;
+var nanonautY = 40;
+window.addEventListener('load', start);
+function start() {
+    window.requestAnimationFrame(mainLoop);
+}
+            // MAIN LOOP
+function mainLoop() {
+    update();
+    draw();
+    window.requestAnimationFrame(mainLoop);
+}
+
+            // PLAYER INPUT
+
+            // UPDATING
+function update() {
+
+}
+
+            // DRAWING
+function draw() {
+    c.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    //Draw the Nanonaut.
+    c.drawImage(nanonautImage, nanonautX, nanonautY);
+}
+
         </script>
     </body>
 </html>
