--- a/program.html
+++ b/program.html
@@ -11,20 +11,31 @@ var CANVAS_HEIGHT = 600;
 var NANONAUT_WIDTH = 181;
 var NANONAUT_HEIGHT = 229;
 var GROUND_Y = 540;
+var NANONAUT_Y_ACCELERATION = 1;
+var SPACE_KEYCODE = 32;
+var NANONAUT_JUMP_SPEED = 20
 
             // SETUP
 var canvas = document.createElement('canvas');
+var nanonautYSpeed = 0;
+var spaceKeyIsPressed = false;
 var c = canvas.getContext('2d');
 canvas.width = CANVAS_WIDTH;
 canvas.height = CANVAS_HEIGHT;
 document.body.appendChild(canvas);
 var nanonautImage = new Image();
 nanonautImage.src = 'images/nanonaut.png';
+var backgroundImage = new Image();
+backgroundImage.src = 'images/background.png';
 var nanonautX = 50;
 var nanonautY = 40;
+window.addEventListener('keydown', onKeyDown);
+window.addEventListener('keyup', onKeyUp);
 window.addEventListener('load', start);
 function start() {
     window.requestAnimationFrame(mainLoop);
+    
+
 }
             // MAIN LOOP
 function mainLoop() {
@@ -34,16 +45,44 @@ function mainLoop() {
 }
 
             // PLAYER INPUT
+function onKeyDown(event) {
+    if (event.keyCode === SPACE_KEYCODE) {
+        spaceKeyIsPressed = true;
+       
+    }
+}  
+function onKeyUp(event) {
+    if (event.keyCode === SPACE_KEYCODE) {
+        spaceKeyIsPressed = false;
+    }
+}        
 
             // UPDATING
 function update() {
-
+    //function update() {
+        if (spaceKeyIsPressed) {
+            nanonautYSpeed = -NANONAUT_JUMP_SPEED;
+        }
+    //}
+// Update Nanonaut.
+nanonautY = nanonautY + nanonautYSpeed;
+nanonautYSpeed = nanonautYSpeed + NANONAUT_Y_ACCELERATION;
+if (nanonautY > (GROUND_Y - NANONAUT_HEIGHT)){
+    nanonautY = GROUND_Y - NANONAUT_HEIGHT;
+    nanonautYSpeed = 0;
+}
 }
 
             // DRAWING
 function draw() {
-    c.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    //Draw the Nanonaut.
+    //Draw the sky.
+    c.fillStyle = 'LightSkyBlue';
+    c.fillRect(0, 0, CANVAS_WIDTH, GROUND_Y - 40);
+    //Draw the background.
+    c.drawImage(backgroundImage, 0, -210);
+    //Draw the ground.
+    c.fillStyle = 'ForestGreen';
+    c.fillRect(0, GROUND_Y - 40, CANVAS_WIDTH, CANVAS_HEIGHT - GROUND_Y + 40);
     c.drawImage(nanonautImage, nanonautX, nanonautY);
 }
 
